--- a/fund.css
+++ b/fund.css
@@ -105,7 +105,7 @@ img {
     overflow: hidden;
     margin-top: 30px;
     margin-left: 30px;
-    background-image: url("https://freerangestock.com/sample/123582/three-boy-friends-.jpg");
+    background-image: url("https://media.istockphoto.com/id/863105740/photo/childrens-sports-team-charity-drive-for-donations-local-disaster-relief.jpg?s=612x612&w=0&k=20&c=FyCwE77TifwASnpyRS00B0xnS0fkiLVFSq-wZOWBe8I=");
     background-size: cover;
 }
 .image-container .text{
